<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:src="@color/purple_200"
            android:contentDescription="@string/detail_image_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/release_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            tools:text="Release Year" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genres"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rb_detail_rating"
            app:layout_constraintTop_toBottomOf="@+id/rb_detail_rating" />

        <RatingBar
            android:id="@+id/rb_detail_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription=""
            app:layout_constraintStart_toStartOf="@+id/release_year"
            app:layout_constraintTop_toBottomOf="@+id/release_year" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            tools:text="Quote"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_poster"/>

        <TextView
            android:id="@+id/overview_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_heading"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quote"/>

        <TextView
            android:id="@+id/duration_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Duration"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/release_year"
            app:layout_constraintStart_toEndOf="@+id/release_year"
            app:layout_constraintTop_toTopOf="@+id/release_year" />

        <TextView
            android:id="@+id/overview_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_heading"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/overview_heading"
            app:layout_constraintTop_toBottomOf="@+id/overview_heading" />

        <TextView
            android:id="@+id/production_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production_heading"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_content" />

        <TextView
            android:id="@+id/production_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production_heading"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/production_heading"
            app:layout_constraintTop_toBottomOf="@+id/production_heading" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_favorite"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintBottom_toBottomOf="@+id/image_poster"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
